# androidvncserver

./: .editorconfig  .gitignore  .gitmodules  Application.mk  CMakeLists.txt  README.md  androidvncserver.c  build.sh  droidvncserver.c  main.c  updateScreen.c
include/: common.h  screenFormat.h
inputMethods/: input.c
libjpeg-turbo/: Android.mk
libvncserver/: CMakeLists.txt
openssl/crypto/: Android.mk
screenMethods/: flinger.h  framebuffer.c
vnc/: Android.mk  droidvncserver.c  updateScreen.c
vnc/LibVNCServer-0.9.9/libvncserver/: rfbserver.c
vnc/linux/: uinput.h
vnc/screenMethods/: adb.c  flinger.c
vnc/suinput/: suinput.c  suinput.h
